--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,105 @@
+body {
+  margin: 0;
+  padding: 0;
+  height: 100vh;
+  box-sizing: border-box;
+}
+
 .App {
+  height: 100vh;
+  background: linear-gradient(rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.3)),
+    url("./assets/godafoss.jpg");
+  background-size: cover;
+  background-position: center;
+  display: flex;
+  justify-content: center;
+  align-items: center;
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
+.card1 {
+  font-size: 24px !important;
+  position: relative;
+  background: linear-gradient(93deg, grey, transparent, skyblue) !important;
+  background: red;
+  color: ghostwhite;
+  width: 65%;
+  height: 40%;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  align-items: center;
+  border-radius: 25px !important;
+  padding: 2%;
 }
 
-.App-link {
-  color: #61dafb;
+.heading {
+  text-align: center;
+  height: 580px;
+  font-family: "Spartan", sans-serif;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
+.advice-btn {
+  height: 18%;
+  width: 30%;
+  position: absolute;
+  bottom: 15px;
+  font-family: serif;
+  font-size: 21px !important;
+  border-radius: 25px !important;
+}
+
+@media only screen and (max-width: 600px) {
+  .heading {
+    font-size: 20px !important;
   }
-  to {
-    transform: rotate(360deg);
+  .card1 {
+    height: 35%;
+  }
+  .advice-btn {
+    font-size: 16px !important;
+    width: 60% !important;
+    padding: 0;
+  }
+}
+
+@media only screen and (min-width: 601px) {
+  .heading {
+    font-size: 22px !important;
+  }
+  .card1 {
+    height: 35%;
+  }
+  .advice-btn {
+    font-size: 18px !important;
+    width: 55%;
+    padding: 0;
+  }
+}
+
+@media only screen and (min-width: 768px) {
+  .heading {
+    font-size: 24px !important;
+  }
+  .card1 {
+    height: 35%;
+  }
+  .advice-btn {
+    font-size: 20px !important;
+    width: 50%;
+    padding: 0;
+  }
+}
+
+@media only screen and (min-width: 990px) {
+  .heading {
+    font-size: 26px !important;
+  }
+  .card1 {
+    height: 45%;
+    width: 55%;
+  }
+  .advice-btn {
+    font-size: 22px !important;
+    width: 40%;
+    padding: 0;
   }
 }
